syntax = "proto3";
package slip0044;
option go_package = "github.com/trisacrypto/trisa/pkg/slip0044";

// Note: This is not a complete list of all SLIP-0044 registered coin types, but should
// contain all coins supported by TRISA and TRP. See
// https://github.com/satoshilabs/slips/blob/master/slip-0044.md for the full list.
enum CoinType {
  BITCOIN = 0;
  TESTNET = 1;
  LITECOIN = 2;
  DOGECOIN = 3;
  REDDCOIN = 4;
  DASH = 5;
  PEERCOIN = 6;
  NAMECOIN = 7;
  FEATHERCOIN = 8;
  COUNTERPARTY = 9;
  BLACKCOIN = 10;
  NUSHARES = 11;
  NUBITS = 12;
  MAZACOIN = 13;
  VIACOIN = 14;
  CLEARINGHOUSE = 15;
  RUBYCOIN = 16;
  GROESTLCOIN = 17;
  DIGITALCOIN = 18;
  CANNACOIN = 19;
  DIGIBYTE = 20;
  OPEN_ASSETS = 21;
  MONACOIN = 22;
  CLAMS = 23;
  PRIMECOIN = 24;
  NEOSCOIN = 25;
  JUMBUCKS = 26;
  ZIFTRCOIN = 27;
  VERTCOIN = 28;
  NXT = 29;
  BURST = 30;
  MONETARYUNIT = 31;
  ZOOM = 32;
  VIRTUAL_CASH = 33;
  CANADA_ECOIN = 34;
  SHADOWCASH = 35;
  PARKBYTE = 36;
  PANDACOIN = 37;
  STARTCOIN = 38;
  MOIN = 39;
  EXPANSE = 40;
  EINSTEINIUM = 41;
  DECRED = 42;
  NEM = 43;
  PARTICL = 44;
  ARGENTUM = 45;
  LIBERTAS = 46;
  POSW_COIN = 47;
  SHREEJI = 48;
  GLOBAL_CURRENCY_RESERVE = 49;
  NOVACOIN = 50;
  ASIACOIN = 51;
  BITCOINDARK = 52;
  DOPECOIN = 53;
  TEMPLECOIN = 54;
  AIB = 55;
  EDRCOIN = 56;
  SYSCOIN = 57;
  SOLARCOIN = 58;
  SMILEYCOIN = 59;
  ETHER = 60;
  ETHER_CLASSIC = 61;
  PESOBIT = 62;
  LANDCOIN = 63;
  OPEN_CHAIN = 64;
  BITCOINPLUS = 65;
  INTERNET_OF_PEOPLE = 66;
  NEXUS = 67;
  INSANECOIN = 68;
  OKCASH = 69;
  BRITCOIN = 70;
  COMPCOIN = 71;
  CROWN = 72;
  BELACOIN = 73;
  ICON = 74;
  FUJICOIN = 75;
  MIX = 76;
  VERGE_CURRENCY = 77;
  ELECTRONIC_GULDEN = 78;
  CLUBCOIN = 79;
  RICHCOIN = 80;
  POTCOIN = 81;
  QUARKCOIN = 82;
  TERRACOIN = 83;
  GRIDCOIN = 84;
  AURORACOIN = 85;
  IXCOIN = 86;
  GULDEN = 87;
  BITBEAN = 88;
  BATA = 89;
  MYRIADCOIN = 90;
  BITSEND = 91;
  UNOBTANIUM = 92;
  MASTERTRADER = 93;
  GOLDBLOCKS = 94;
  SAHAM = 95;
  CHRONOS = 96;
  UBIQUOIN = 97;
  EVOTION = 98;
  SAVETHEOCEAN = 99;
  BIGUP = 100;
  GAMECREDITS = 101;
  DOLLARCOINS = 102;
  ZAYEDCOIN = 103;
  DUBAICOIN = 104;
  STRATIS = 105;
  SHILLING = 106;
  MARSCOIN = 107;
  UBIQ = 108;
  PESETACOIN = 109;
  NEUROCOIN = 110;
  ARK = 111;
  ULTIMATESECURECASHMAIN = 112;
  HEMPCOIN = 113;
  LINX = 114;
  ECOIN = 115;
  DENARIUS = 116;
  PINKCOIN = 117;
  ATOM = 118;
  PIVX = 119;
  FLASHCOIN = 120;
  ZENCASH = 121;
  PUTINCOIN = 122;
  BITZENY = 123;
  UNIFY = 124;
  STEALTHCOIN = 125;
  BREAKOUT_COIN = 126;
  VCASH = 127;
  MONERO = 128;
  VOXELS = 129;
  NAVCOIN = 130;
  FACTOM_FACTOIDS = 131;
  FACTOM_ENTRY_CREDITS = 132;
  ZCASH = 133;
  LISK = 134;
  STEEM = 135;
  ZCOIN = 136;
  RSK = 137;
  GIFTBLOCK = 138;
  REALPOINTCOIN = 139;
  LBRY_CREDITS = 140;
  KOMODO = 141;
  BISQ_TOKEN = 142;
  RIECOIN = 143;
  RIPPLE = 144;
  BITCOIN_CASH = 145;
  NEBLIO = 146;
  ZCLASSIC = 147;
  STELLAR_LUMENS = 148;
  NOLIMITCOIN2 = 149;
  WHALECOIN = 150;
  EUROPECOIN = 151;
  DIAMOND = 152;
  BYTOM = 153;
  BIOCOIN = 154;
  WHITECOIN_CLASSIC = 155;
  BITCOIN_GOLD = 156;
  BITCOIN_2X = 157;
  SUPERSKYNET = 158;
  TOACOIN = 159;
  BITCORE = 160;
  ADCOIN = 161;
  BRIDGECOIN = 162;
  ELLAISM = 163;
  PIRL = 164;
  NANO = 165;
  VIVO = 166;
  FIRSTCOIN = 167;
  HELLENICCOIN = 168;
  BUZZ = 169;
  EMBER = 170;
  HCASH = 171;
  HTMLCOIN = 172;
  OBSIDIAN = 173;
  ONIXCOIN = 174;
  RAVENCOIN = 175;
  GOBYTE = 176;
  BITCOINZ = 177;
  POA = 178;
  NEWYORKCOIN = 179;
  MARTEXCOIN = 180;
  WINCOIN = 181;
  MINEXCOIN = 182;
  BITCOIN_PRIVATE = 183;
  MUSICOIN = 184;
  BITCOIN_ATOM = 185;
  CRAVE = 186;
  STRAKS = 187;
  WORLD_BITCOIN = 188;
  LITECASH = 189;
  EXCLUSIVECOIN = 190;
  LYNX = 191;
  LITECOINCASH = 192;
  FEIRM = 193;
  EOS = 194;
  TRON = 195;
  KOBOCOIN = 196;
  HUSH = 197;
  BANANO = 198;
  ETF = 199;
  OMNI = 200;
  BITCOINFILE = 201;
  UNIFORM_FISCAL_OBJECT = 202;
  CRYPTONODES = 203;
  BYTECOIN = 204;
  RINGO = 205;
  ALAYA = 206;
  EVERITOKEN = 207;
  ATN = 208;
  BISMUTH = 209;
  NEETCOIN = 210;
  BOPOCHAIN = 211;
  UTRUM = 212;
  ALIAS = 213;
  MONKEY_PROJECT = 214;
  BOXYCOIN = 215;
  FLO = 216;
  MEGACOIN = 217;
  BITCLOUD = 218;
  ARTAX = 219;
  ANON = 220;
  LITECOINZ = 221;
  BITCOIN_GREEN = 222;
  INTERNET_COMPUTER = 223;
  SMARTCASH = 224;
  XUEZ = 225;
  HELIUM = 226;
  WEBCHAIN = 227;
  ACTINIUM = 228;
  NOS_STABLE_COINS = 229;
  BITCASH = 230;
  HELP_THE_HOMELESS_COIN = 231;
  TREZARCOIN = 232;
  VARDA = 233;
  IOV = 234;
  FIO = 235;
  BITCOINSV = 236;
  DEXON = 237;
  QUANTUM_RESISTANT_LEDGER = 238;
  CHAINX = 239;
  LOKI = 240;
  IMAGEWALLET = 241;
  NIMIQ = 242;
  SOVEREIGN_COIN = 243;
  JIBITAL_COIN = 244;
  SIMPLE_LEDGER_PROTOCOL = 245;
  ENERGY_WEB = 246;
  ULORD = 247;
  EXOS = 248;
  ELECTRA = 249;
  SOOM = 250;
  REDSTONE = 251;
  FREECOIN = 252;
  NEWPOWERCOIN = 253;
  BLOCKSTAMP = 254;
  SMARTHOLDEM = 255;
  BITCOIN_NANO = 256;
  BITCOIN_CORE = 257;
  ZEN_PROTOCOL = 258;
  ZEST = 259;
  ARCBLOCK = 260;
  PION = 261;
  DREAMTEAM3 = 262;
  ZBUX = 263;
  KEPLER = 264;
  TOKENPAY = 265;
  CHAINZILLA = 266;
  ANKER = 267;
  BCCHAIN = 268;
  HPB = 269;
  ONE = 270;
  SBC = 271;
  IPCHAIN = 272;
  DOMINANTCHAIN = 273;
  ONEGRAM = 274;
  SHITCOIN = 275;
  ANDESCOIN = 276;
  AREPACOIN = 277;
  BOLIVARCOIN = 278;
  RILCOIN = 279;
  HATHOR_NETWORK = 280;
  FACTOM_ID = 281;
  BRAVO = 282;
  ALGORAND = 283;
  BITCOINZERO = 284;
  GRAVITYCOIN = 285;
  HEAT = 286;
  DIGITALNOTE = 287;
  FUSION = 288;
  CAPRICOIN = 289;
  BOLD = 290;
  IOST = 291;
  TKEYCOIN = 292;
  USECHAIN = 293;
  BITCOINCZ = 294;
  IOCOIN = 295;
  ASOFE = 296;
  MASS = 297;
  FAIRCOIN = 298;
  NEKONIUM = 299;
  GENARO_NETWORK = 300;
  DIVI_PROJECT = 301;
  COMMUNITY = 302;
  EUNO = 303;
  IOTEX = 304;
  DEEPONION = 305;
  EIGHTBIT = 306;
  ATOKEN_COIN = 307;
  BITSHARES = 308;
  NERVOS_CKB = 309;
  ULTRAIN = 310;
  ADSHARES = 311;
  AURA = 312;
  ZILLIQA = 313;
  MOAC = 314;
  SWTC = 315;
  VNSCOIN = 316;
  PLUG = 317;
  MATRIX_AI_NETWORK = 318;
  ECCOIN = 319;
  RAPIDS = 320;
  RAPTURE = 321;
  HASHGARD = 322;
  ZERO = 323;
  EBOOST = 324;
  SHARD = 325;
  METRIX_COIN = 326;
  COMMERCIUM = 327;
  BLOCKNET = 328;
  AUDAX = 329;
  TERRA = 330;
  ZPRIME = 331;
  KUVA_UTILITY_NOTE = 332;
  MEMCOIN = 333;
  CREDITS = 334;
  SWIFTCASH = 335;
  FIX = 336;
}
